--- a/sugarclient/package.json
+++ b/sugarclient/package.json
@@ -6,7 +6,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "proxy": "http://localhost:5000"
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.0.2",
@@ -39,3 +40,4 @@
     ]
   }
 }
+
