--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/LilGherkin/SyntactictSugar#readme",
   "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^5.8.1",
+    "axios": "^0.18.0",
+    "express": "^4.16.3",
+    "mongoose": "^5.3.16",
+    "if-env": "^1.0.4",
     "morgan": "^1.9.1"
   }
 }
