--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.3",
-    "mongoose": "^5.3.16",
     "if-env": "^1.0.4",
-    "morgan": "^1.9.1"
+    "mongoose": "^5.3.16",
+    "morgan": "^1.9.1",
+    "node-sass": "^4.13.0"
   }
 }
